ingress/ddb.yaml
apiVersion: v1
kind: Service
metadata:
  name: ddb
  namespace: default
spec:
  externalName: ddb.chnet
  type: ExternalName
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/rewrite-target: /$1
  name: ddb-wiki
  namespace: default
spec:
  rules:
  - host: ddb.ch.tudelft.nl
    http:
      paths:
      - path: /wiki(.*)
        backend:
          serviceName: ddb
          servicePort: 8850
  tls:
  - hosts:
    - ddb.ch.tudelft.nl
    secretName: ddb-ingress-tls
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/temporal-redirect: https://ddb.tudelft.nl
  name: ddb-website
  namespace: default
spec:
  rules:
  - host: ddb.ch.tudelft.nl
  tls:
  - hosts:
    - ddb.ch.tudelft.nl
    secretName: ddb-ingress-tls
