ingress/flitcie.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-body-size: 64M
  name: flitcie-gallery3
  namespace: w3cie
spec:
  rules:
    - host: flitcie.ch.tudelft.nl
      http:
        paths:
        - backend:
            serviceName: flitcie-gallery3
            servicePort: 80
  tls:
    - hosts:
        - flitcie.ch.tudelft.nl
      secretName: flitcie-tls
