ingress/mcod.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
  name: mcod
  namespace: w3cie
spec:
  rules:
  - host: mcod.ch.tudelft.nl
    http:
      paths:
      - backend:
          serviceName: mcod
          servicePort: 80
  tls:
  - hosts:
    - mcod.ch.tudelft.nl
    secretName: mcod-tls
