ingress/userman2-redirect.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/permanent-redirect: https://dienst2.ch.tudelft.nl
  name: userman2-redirect
  namespace: default
spec:
  rules:
  - host: userman2.chnet
  tls:
  - hosts:
    - userman2.chnet
    secretName: userman2-tls
